Adjusted beneficiaries text wrapping under activities to ensure the text displays correctly

--- a/app/stylesheets/partials/_form.sass
+++ b/app/stylesheets/partials/_form.sass
@@ -86,10 +86,10 @@ form.data_response, .basic_form
   .check_boxes
     fieldset
       float: left
-      width: 54%
+      width: 78%
     legend
       float: left
-      width: 33%
+      width: 170px
       label
         width: auto
     ol
